--- a/config/database.yml
+++ b/config/database.yml
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: DemoApp_development
+  database: ProjectDemoApp_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: DemoApp_test
+  database: ProjectDemoApp_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: DemoApp_production
-  username: DemoApp
-  password: <%= ENV['DEMOAPP_DATABASE_PASSWORD'] %>
+  database: ProjectDemoApp_production
+  username: ProjectDemoApp
+  password: <%= ENV['PROJECTDEMOAPP_DATABASE_PASSWORD'] %>
